--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nft.storage": "^7.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.7.1",
     "react-leaflet": "^3.2.5",
     "react-map-gl": "^7.0.19",
     "react-scripts": "5.0.1",
